--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2020-xx-xx  Release 7.32.2                                     ---
 ----------------------------------------------------------------------
 
+* added MGED stat command for reporting of object info - Cliff Yapp
 * corrected examples in gdiff man page - Cliff Yapp
 * fixed help message for -F option on gdiff command - Cliff Yapp
 * fixed mged -c bomb attaching to graphical displays - Sean Morrison
@@ -152,9 +153,9 @@ infrastructure with BRL-CAD's imminent migration to Git.
 	- Sean Morrison, Cliff Yapp
 * added a copy subcommand to MGED's attr command - Cliff Yapp
 * fixed a locking condition in MGED's rtcheck command - Cliff Yapp
-* added support for >=< prefixes for mater -d get options Cliff Yapp
+* added support for >=< prefixes for mater -d get options - Cliff Yapp
 * fixed brlman lookup location of html manual pages - Cliff Yapp
-* fixed rt -t top-to-bottom parallel rendering option  Sean Morrison
+* fixed rt -t top-to-bottom parallel rendering option - Sean Morrison
 * added a 'flip' normals command to MGED's brep command - Cliff Yapp
 * added rtweight support for in-.g density information - Cliff Yapp
 * improved usability of vol primitives w/ missing data - Sean Morrison
@@ -396,7 +397,7 @@ performance ray tracing pipeline.
 * fixed patch-g tool and E command infinite loop bug - Sean Morrison
 * improved NMG ray tracing fault tolerance - Sean Morrison
 * added 3dm-g support for layers and names - Keith Bowman
-* fixed color/shader preservation issue with 3dm-g importer - Jon Engbert
+* fixed issue preserving color/shader info with 3dm-g - Jon Engbert
 * added 3dm-g support for mesh objects - Jon Engbert
 * added csg implicit hierarchy conversion to brep command - Cliff Yapp
 * fixed crash in clone when told to make zero copies - Cliff Yapp
@@ -410,7 +411,7 @@ performance ray tracing pipeline.
 * removed any-png.sh - use pix tools - Sean Morrison
 * removed librtserver interface - Cliff Yapp
 * removed MGED per_line command - Sean Morrison
-* updated MGED tops command: default to -g -u behavior- Sean Morrison
+* updated MGED tops command: default to -g -u behavior - Sean Morrison
 * removed MGED -n option; use -c instead - Sean Morrison
 * removed MGED commands pl, pov and polybinout - Sean Morrison
 * removed UtahRLE image tools - Cliff Yapp
