--- a/TODO
+++ b/TODO
@@ -14,7 +14,7 @@ coordinating release tasks.  At the beginning of each month,
 developers add the tasks they expect to complete and then remove those
 tasks as they are completed.
 
-test
+test2
 
 THESE TASKS SHOULD HAPPEN BEFORE THE NEXT RELEASE
 -------------------------------------------------
